Fixes the matrix header overflow in AJAX

--- a/esp/public/media/default_styles/scheduling.css
+++ b/esp/public/media/default_styles/scheduling.css
@@ -72,7 +72,7 @@ position: absolute; left: 0; width: 123px; top: 0; bottom: 0;
 border-right: 2px solid #000; background: #eee;
 }
 .matrix-column-header-box {
-display: table; overflow: hidden;
+display: block; overflow: hidden;
 position: absolute; left: 125px; right: 0; top: 0; height: 50px;
 background: #eee;
 }
